--- a/conf/example/nextcloud-example.conf
+++ b/conf/example/nextcloud-example.conf
@@ -102,8 +102,9 @@ server
 
 server
     {
-        listen 80;
-        #listen [::]:80;
+        listen 443 ssl;
+        #listen [::]:443 ssl;
+        http2 on;
         server_name lnmp.org www.lnmp.org;
         root /home/wwwroot/nextcloud;
 
