--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -63,45 +63,21 @@ http
 server
     {
         listen 80 default_server;
-        #listen [::]:80 default_server ipv6only=on;
+        #listen [::]:80 default_server;
+        listen 443 ssl default_server;
+        #listen [::]:443 ssl default_server;
+
         server_name _;
-        index index.html index.htm index.php;
-        root  /home/wwwroot/default;
 
-        #error_page   404   /404.html;
+        set $empty "";
+        ssl_ciphers aNULL;
+        ssl_certificate data:$empty;
+        ssl_certificate_key data:$empty;
 
-        # Deny access to PHP files in specific directory
-        #location ~ /(wp-content|uploads|wp-includes|images)/.*\.php$ { deny all; }
-
-        include enable-php.conf;
-
-        location /nginx_status
-        {
-            stub_status on;
-            access_log   off;
-        }
-
-        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
-        {
-            expires      30d;
-        }
-
-        location ~ .*\.(js|css)?$
-        {
-            expires      12h;
-        }
-
-        location ~ /.well-known {
-            allow all;
-        }
-
-        location ~ /\.
-        {
-            deny all;
-        }
-
-        access_log  /home/wwwlogs/access.log;
+        return 444;
     }
+    
 include vhost/*.conf;
+
 }
 
